<resources>
    <string name="app_name">ChatApp</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="phone">Phone</string>
    <string name="birth_day">Birthday</string>


    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="can_not_be_empty">Can not be empty</string>

    <string name="login_auth_error_user_not_found">There is no user record corresponding to this email and password</string>
    <string name="login_auth_error_wrong_password">The password is invalid. Please try again</string>

    <string name="sign_out">Sign out</string>
    <string name="create_your_account">Create your account</string>
    <string name="create">Create</string>
    <string name="retype_password">Retype password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="your_password_and_confirm_password_do_not_match">Your password and confirm password do not match</string>
    <string name="your_account_cannot_be_created_because_this_email_address_is_already_in_use">Your account cannot be created because this email address is already in use</string>
    <string name="your_password_must_have_at_least_6_characters">Your password must have at least 6 characters </string>
    <string name="your_email_is_not_valid">Your email is not valid</string>
    <string name="please_fill_in_the_registration_form">Please fill in the registration form</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string name="your_name">Your name</string>
    <string name="your_birthday">Your birthday</string>
    <string name="your_phone">Your phone</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="your_birthday_is_empty_or_not_valid">Your birthday is empty or not valid</string>
    <string name="search_message">Search message</string>
    <string name="select_your_profile_picture">Select your profile picture</string>
    <string name="change">Change</string>
    <string name="well_we_got_nothing">Well...we got nothing</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="please_allow_this_app_to_read_and_write_to_your_storage">Please allow this app to read and write to your storage</string>

    <string name="message_title">Message</string>
    <string name="friends_title">Friends</string>
    <string name="account_title">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
