<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/login_app_name_font_size"
        android:gravity="center"
        android:textColor="@color/colorTextPrimary"
        android:fontFamily="@font/app_name_font"
        android:layout_marginBottom="@dimen/activity_login_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/username"
        android:layout_marginBottom="@dimen/activity_vertical_margin"

        android:textColor="@color/colorTextPrimary"
        android:backgroundTint="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimaryLight"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        android:layout_marginBottom="@dimen/activity_vertical_margin"

        android:textColor="@color/colorTextPrimary"
        android:backgroundTint="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimaryLight"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="@dimen/activity_login_margin"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorTextPrimary"
        />

    <ProgressBar
        android:id="@+id/pbSignInProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressTint="@color/colorTextPrimary"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        />
</LinearLayout >