<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="@dimen/sign_up_title_font_size"
        android:gravity="center"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/email"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/colorTextPrimary"
        android:backgroundTint="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimaryLight"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_thin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_thin">
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/colorTextPrimary"
        android:backgroundTint="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimaryLight"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_thin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_thin" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/confirm_password"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/colorTextPrimary"
        android:backgroundTint="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextPrimaryLight"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_thin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_thin"
        />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/create"

        android:textColor="@color/colorPrimary"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_thin"
        android:layout_marginRight="@dimen/activity_horizontal_margin_thin">

    </Button>

    <ProgressBar
        android:id="@+id/pbSignUpProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:progressTint="@color/colorTextPrimary"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone"
        />


</LinearLayout>